name:                jmacro
version:             0.1
synopsis:            QuasiQuotation library for programmatic generation of Javascript code.
description:         Javascript syntax, functional syntax, hygeineic names, compile-time guarantees of syntactic correctness, limited typechecking.
category:            Language
license:             BSD3
license-file:        LICENSE
author:              Gershom Bazerman
maintainer:          gershomb@gmail.com
Tested-With:         GHC == 6.10.3
Build-Type:          Simple
Cabal-Version:       >= 1.6

flag smaller-base
flag syb-with-class
flag quasi-quotation

library
  build-depends:     base, containers, pretty, safe >= 0.2, parsec >= 2.1, template-haskell >= 2.3, mtl, haskell-src-meta, bytestring >= 0.9
  exposed-modules:   Language.Javascript.JMacro
                     Language.Javascript.JMacro.Util
                     Language.Javascript.JMacro.Typed
  other-modules:     Language.Javascript.JMacro.Base
                     Language.Javascript.JMacro.QQ
  ghc-options:       -Wall
  if impl(ghc >= 6.8)
    ghc-options:     -fwarn-tabs

source-repository head
  type:     darcs
  location: --coming soon--
