name:                jmacro
version:             0.6.0
synopsis:            QuasiQuotation library for programmatic generation of Javascript code.
description:         Javascript syntax, functional syntax, hygienic names, compile-time guarantees of syntactic correctness, limited typechecking. Additional documentation available at <http://www.haskell.org/haskellwiki/Jmacro>
category:            Language
license:             BSD3
license-file:        LICENSE
author:              Gershom Bazerman
maintainer:          gershomb@gmail.com
Tested-With:         GHC == 7.0.2
Build-Type:          Simple
Cabal-Version:       >= 1.6

library
  build-depends:     base >= 4, base < 5, containers, wl-pprint-text, text, safe >= 0.2, parsec > 3.0, template-haskell >= 2.3, mtl > 1.1 , haskell-src-exts, haskell-src-meta, bytestring >= 0.9, syb, json, regex-posix > 0.9

  exposed-modules:   Language.Javascript.JMacro
                     Language.Javascript.JMacro.Util
                     Language.Javascript.JMacro.TypeCheck
                     Language.Javascript.JMacro.Types
                     Language.Javascript.JMacro.Prelude
                     Language.Javascript.JMacro.Rpc
  other-modules:     Language.Javascript.JMacro.Base
                     Language.Javascript.JMacro.QQ
                     Language.Javascript.JMacro.ParseTH
  ghc-options:       -Wall

flag benchmarks
  description: Build the benchmarks
  default: False

executable jmacro
  build-depends: parseargs
  main-is: Language/Javascript/JMacro/Executable.hs

executable jmacro-bench
  main-is: Language/Javascript/JMacro/Benchmark.hs
  if flag(benchmarks)
    buildable: True
    build-depends: criterion
  else
    buildable: False

source-repository head
  type:      darcs
  location:  http://patch-tag.com/r/gershomb/jmacro
